--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body background="https://c4.wallpaperflare.com/wallpaper/140/305/272/linux-void-void-linux-arch-linux-hacking-hd-wallpaper-preview.jpg">
         <p align="center"><u><h1>Welcome to the my website</h1></u></p>
         <p1><u>Who am i ?</u></p1>
-        <b>Hi , I am a 14 year old student who is interested in coding and computer science.</b>
+        <p><b>Hi , I am a 14 year old student who is interested in coding and computer science.</b></p>
         <p>I find computers fascinating and I to make it my proffesion.</p>
         <p>I made my own minimalist linux distro using the original linux kernel and used buildroot to make the root file system :)</p>
         <p>If you want to check it out look in my github repos.</p>
