--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
     <head>
+        <style>
+body {
+  background-image: url(https://c4.wallpaperflare.com/wallpaper/140/305/272/linux-void-void-linux-arch-linux-hacking-hd-wallpaper-preview.jpg);
+  background-repeat: no-repeat;
+}
+</style>
+
         <title>
             HDD-DEV
         </title>
     </head>
-    <body background="https://c4.wallpaperflare.com/wallpaper/140/305/272/linux-void-void-linux-arch-linux-hacking-hd-wallpaper-preview.jpg">
+    <body>
         <p align="center"><u><h1>Welcome to the my website</h1></u></p>
         <p1><u>Who am i ?</u></p1>
         <p><b>Hi , I am a 14 year old student who is interested in coding and computer science.</b></p>
