--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 body {
   background-image: url(https://c4.wallpaperflare.com/wallpaper/140/305/272/linux-void-void-linux-arch-linux-hacking-hd-wallpaper-preview.jpg);
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 </style>
 
