--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
             HDD-DEV
         </title>
     </head>
-    <body text="white">
+    <body text="green">
         <p align="center"><u><h1>Welcome to the my website</h1></u></p>
         <p1><u>Who am i ?</u></p1>
         <p><b>Hi , I am a 14 year old student who is interested in coding and computer science.</b></p>
